# FitzHughNaumo_SpiralWaveTracking_AMethodsComparison

./: .gitignore  CMakeLists.txt  ComputeFHN.cu  ComputeFHN.cuh  EvolvingPlot.py  FHNpch.cpp  FHNpch.h  README.md  TipTrajectory.py  main.cpp
CMakeLocalBuild/: CMakeLists.txt
CUDAfiles/: ComputeFHN.cu  ComputeFHN.cuh
PreCompiledHeader/: FHNpch.cpp  FHNpch.h
ResultingVisuals/: EvolvingPlot.py  TipTrajectory.py
Structures/: StructureManagment.h
